; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/usb/host/extr_adm5120-drv.c_admhc_adm5120_start.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/usb/host/extr_adm5120-drv.c_admhc_adm5120_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_hcd = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.admhcd = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"unable to init %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"unable to run %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_hcd*)* @admhc_adm5120_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @admhc_adm5120_start(%struct.usb_hcd* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_hcd*, align 8
  %4 = alloca %struct.admhcd*, align 8
  %5 = alloca i32, align 4
  store %struct.usb_hcd* %0, %struct.usb_hcd** %3, align 8
  %6 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %7 = call %struct.admhcd* @hcd_to_admhcd(%struct.usb_hcd* %6)
  store %struct.admhcd* %7, %struct.admhcd** %4, align 8
  %8 = load %struct.admhcd*, %struct.admhcd** %4, align 8
  %9 = call i32 @admhc_init(%struct.admhcd* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %14 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @HCD_ERR(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %33

18:                                               ; preds = %1
  %19 = load %struct.admhcd*, %struct.admhcd** %4, align 8
  %20 = call i32 @admhc_run(%struct.admhcd* %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %18
  %24 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %25 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @HCD_ERR(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %27)
  br label %30

29:                                               ; preds = %18
  store i32 0, i32* %2, align 4
  br label %35

30:                                               ; preds = %23
  %31 = load %struct.usb_hcd*, %struct.usb_hcd** %3, align 8
  %32 = call i32 @admhc_stop(%struct.usb_hcd* %31)
  br label %33

33:                                               ; preds = %30, %12
  %34 = load i32, i32* %5, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %33, %29
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local %struct.admhcd* @hcd_to_admhcd(%struct.usb_hcd*) #1

declare dso_local i32 @admhc_init(%struct.admhcd*) #1

declare dso_local i32 @HCD_ERR(i8*, i32) #1

declare dso_local i32 @admhc_run(%struct.admhcd*) #1

declare dso_local i32 @admhc_stop(%struct.usb_hcd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
